Move C sources to a common directory.

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,48 +1,37 @@
-DIR_Config   = ./lib/Config
-DIR_EPD      = ./lib/LCD
-DIR_FONTS    = ./lib/Fonts
-DIR_GUI      = ./lib/GUI
-DIR_Examples = ./examples
-DIR_BIN      = ./bin
-
-OBJ_C = $(wildcard ${DIR_EPD}/*.c ${DIR_Config}/*.c ${DIR_GUI}/*.c ${DIR_Examples}/*.c ${DIR_FONTS}/*.c)
-OBJ_O = $(patsubst %.c,${DIR_BIN}/%.o,$(notdir ${OBJ_C}))
-
-TARGET = main
-
 # USELIB = USE_BCM2835_LIB
-USELIB = USE_WIRINGPI_LIB
-# USELIB = USE_DEV_LIB
-DEBUG = -D $(USELIB)
+# USELIB = USE_WIRINGPI_LIB
+USELIB = USE_DEV_LIB
+
+CC      = gcc
+CFLAGS  = -g -O2 -Wall -Werror -D$(USELIB)
+
+TARGET  = demo
+OBJ     = DEV_Config.o \
+          dev_hardware_SPI.o \
+          font16.o \
+          font20.o \
+          font24.o \
+          GUI_BMP.o \
+          GUI_Paint.o \
+          KEY_1in3_test.o \
+          KEY_APP.o \
+          LCD_1in3.o \
+          LCD_1in3_test.o \
+          main.o \
+          sysfs_gpio.o
+
 ifeq ($(USELIB), USE_BCM2835_LIB)
     LIB = -lbcm2835 -lm
 else ifeq ($(USELIB), USE_WIRINGPI_LIB)
     LIB = -lwiringPi -lm -lpthread -lcrypt -lrt
+else
+    LIB =
 endif
 
+all:    $(TARGET)
 
-CC = gcc
-MSG = -g -O0 -Wall
-CFLAGS += $(MSG) $(DEBUG)
+clean:
+	rm -f *.o $(TARGET)
 
-${TARGET}:${OBJ_O}
-	$(CC) $(CFLAGS) $(OBJ_O) -o $@ $(LIB)
-
-${DIR_BIN}/%.o:$(DIR_Examples)/%.c
-	$(CC) $(CFLAGS) -c  $< -o $@ -I $(DIR_Config) -I $(DIR_GUI) -I $(DIR_EPD)
-
-${DIR_BIN}/%.o:$(DIR_EPD)/%.c
-	$(CC) $(CFLAGS) -c  $< -o $@ -I $(DIR_Config)
-
-${DIR_BIN}/%.o:$(DIR_FONTS)/%.c
-	$(CC) $(CFLAGS) -c  $< -o $@
-
-${DIR_BIN}/%.o:$(DIR_GUI)/%.c
-	$(CC) $(CFLAGS) -c  $< -o $@ -I $(DIR_Config)  -I $(DIR_EPD) -I $(DIR_Examples)
-
-${DIR_BIN}/%.o:$(DIR_Config)/%.c
-	$(CC) $(CFLAGS) -c  $< -o $@ $(LIB)
-
-clean :
-	rm -f $(DIR_BIN)/*.o
-	rm -f $(TARGET)
+$(TARGET): $(OBJ)
+	$(CC) $(LDFLAGS) $(OBJ) $(LIB) -o $@
