LCD demo: draw random pixels.

--- a/pic32/Makefile
+++ b/pic32/Makefile
@@ -1,7 +1,7 @@
 CC      = gcc
 CFLAGS  = -g -O2 -Wall -Werror
 
-TARGET  = lcd-demo
+TARGET  = demo-pixel
 OBJ     = gpio.o spi.o alt.o lcd.o
 
 all:    $(TARGET)
@@ -9,6 +9,11 @@ all:    $(TARGET)
 clean:
 	rm -f *.o $(TARGET)
 
-lcd-demo: lcd-demo.o $(OBJ)
-	$(CC) $(LDFLAGS) lcd-demo.o $(OBJ) -o $@
+demo-pixel: demo-pixel.o $(OBJ)
+	$(CC) $(LDFLAGS) demo-pixel.o $(OBJ) -o $@
 ###
+alt.o: alt.c gpio.h
+demo-pixel.o: demo-pixel.c lcd.h
+gpio.o: gpio.c gpio.h
+lcd.o: lcd.c lcd.h gpio.h spi.h
+spi.o: spi.c spi.h
