--- a/pic32/Makefile
+++ b/pic32/Makefile
@@ -1,7 +1,7 @@
 CC      = gcc
 CFLAGS  = -g -O2 -Wall -Werror
 
-TARGET  = demo-pixel demo-line
+TARGET  = demo-pixel demo-line demo-rect
 OBJ     = gpio.o spi.o alt.o lcd.o
 
 all:    $(TARGET)
@@ -14,10 +14,14 @@ demo-pixel: demo-pixel.o $(OBJ)
 
 demo-line: demo-line.o $(OBJ)
 	$(CC) $(LDFLAGS) demo-line.o $(OBJ) -o $@
+
+demo-rect: demo-rect.o $(OBJ)
+	$(CC) $(LDFLAGS) demo-rect.o $(OBJ) -o $@
 ###
 alt.o: alt.c gpio.h
 demo-line.o: demo-line.c lcd.h
 demo-pixel.o: demo-pixel.c lcd.h
+demo-rect.o: demo-rect.c lcd.h
 gpio.o: gpio.c gpio.h
 lcd.o: lcd.c lcd.h gpio.h spi.h
 spi.o: spi.c spi.h
